--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -2,13 +2,13 @@
   &-1
     animation: float1 3.5s ease-in-out infinite alternate
     position: absolute
-    top: 40%
-    right: 50%
+    top: 70%
+    right: 10%
   &-2
     animation: float1 2.8s ease-in-out infinite alternate
     position: absolute
-    top: 51%
-    right: 30%
+    top: 20%
+    right: 80%
 
 
 @keyframes float1
@@ -20,3 +20,112 @@
 
 .banner-principal__row .banner-principal__img
   width: 400px !important 
+span
+  &.color-secundario
+    background-color: #73c8e2
+    padding: .05rem
+  &.color-primario
+    background-color: #3BA935
+    padding: .05rem
+    font-weight: bold
+  &.color-tres
+    background-color: #e2dacc
+    padding: .05rem
+.border-dashed
+  border-style: dashed
+  border: 2px dashed #3BA935
+  border-radius: 10px
+.shadow
+  // -webkit-box-shadow: 2px 4px 16px 4px rgba(0,0,0,0.38)
+  // -moz-box-shadow: 2px 4px 16px 4px rgba(0,0,0,0.38)
+  // box-shadow: 2px 4px 7px -2px rgba(0,0,0,0.38)
+  border: solid 2px rgba(0,0,0,0.1)
+.fa-chevron-right:before 
+  content: url('../assets/curso/temas/flechader.svg')
+.fa-chevron-left:before 
+  content: url('../assets/curso/temas/flechaiz.svg')
+.titulo-tres
+  position: relative
+  border-radius: 40px
+  background-color: #3BA935
+  display: inline-block
+  padding: .5rem
+  h3
+    color: white
+    margin-left: 4rem
+    margin-right: 2rem
+  &::before
+    position: absolute
+    content: url('../assets/curso/temas/titulo.svg')
+    top: 0
+    left: 0
+    transform: translateY(-8px)
+.mn
+  margin: 0 -3rem
+  background-image: url('../assets/curso/temas/bg-slyde.svg')
+  background-repeat: no-repeat
+  background-size: 100%
+  background-position: center
+.tarjeta.dots
+  position: relative
+  &::before
+    content: url('../assets/curso/temas/dots.svg')
+    position: absolute
+    right: 20px
+    top: 20px
+.tarjeta.dots2
+  position: relative
+  &::before
+    content: url('../assets/curso/temas/dots.svg')
+    position: absolute
+    left: 20px
+    top: 20px
+
+.tarjeta--azul
+  background-color: #E2F4F9
+.acordion__activo
+  background: #D7EED6
+.acordion__accion__btn--a
+  background-color: #FAC22D
+.card-hover
+  background-color: #E5E9EB
+  transition: background-color .4s ease-in-out
+  &:hover
+    background-color: #C6E9F3
+.slyder-a__btn--sigt, .slyder-a__btn--atrs
+  background-color: #fac22d
+  opacity: 1
+  border: 0
+  
+.slyder-a__bullets__item 
+  background-color: #F6F0CA
+  border: 0
+.slyder-a__bullets__item--active
+  background-color: #E6D567
+.linea-tiempo-d.color-secundario .linea-tiempo-d__item--selected .linea-tiempo-d__item__number
+  background-color: #E2DACC
+.linea-tiempo-d__item__content__slot, .linea-tiempo-d__item--selected .linea-tiempo-d__item__content__title
+  background-color: #E2DACC !important
+
+
+.fondo-2
+  background-image: url('../assets/curso/temas/fondo-2.svg')
+  background-position: start
+  background-size: cover
+  background-repeat: no-repeat
+.fondo-3
+  background-image: url('../assets/curso/temas/fondo-3.svg')
+  background-position: start
+  background-size: cover
+  background-repeat: no-repeat
+.fondo-4
+  background-image: url('../assets/curso/temas/fondo-5.svg')
+  background-position: start
+  background-size: cover
+  background-repeat: no-repeat
+
+.bloque-texto-g
+  justify-content: flex-start
+.bloque-texto-g__img
+  left: auto !important
+  right: 0
