--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -54,10 +54,10 @@ $color-institucional: #39A900
 
 // Colores Curso ---------------------------------------
 
-$color-primario: #522981
-$color-secundario: #7DD3E9
-$color-acento-contenido: #FF4A69
-$color-acento-botones: #FFCD0D
+$color-primario: #10314b
+$color-secundario: #73c8e2
+$color-acento-contenido: #3ba935
+$color-acento-botones: #fac22d
 $color-adicional-1: #CDDC39
 $color-adicional-2: #00BCD4
 
@@ -184,7 +184,7 @@ $bp-max-xs: 576px
 .actividad
   background-color: #F2F2F2  
 // Imágen banner principal -----------------------------
-$banner-principal-img-y: '' // 'arriba','abajo',''
+$banner-principal-img-y: 'abajo' // 'arriba','abajo',''
 $banner-principal-img-x: '' // 'derecha',''
 
 // .tarjeta-avatar -----------------------------------
