--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -52,14 +52,14 @@ span
   padding: .5rem
   h3
     color: white
-    margin-left: 4rem
+    margin-left: 2rem
     margin-right: 2rem
-  &::before
-    position: absolute
-    content: url('../assets/curso/temas/titulo.svg')
-    top: 0
-    left: 0
-    transform: translateY(-8px)
+  // &::before
+  //   position: absolute
+  //   content: url('../assets/curso/temas/titulo.svg')
+  //   top: 0
+  //   left: 0
+  //   transform: translateY(-8px)
 .mn
   margin: 0 -3rem
   background-image: url('../assets/curso/temas/bg-slyde.svg')
@@ -123,9 +123,11 @@ span
   background-position: start
   background-size: cover
   background-repeat: no-repeat
-
-.bloque-texto-g
-  justify-content: flex-start
-.bloque-texto-g__img
-  left: auto !important
-  right: 0
+.v2
+  .bloque-texto-g
+    justify-content: flex-start
+  .bloque-texto-g__img
+    left: auto !important
+    right: 0
+.bg-tabs
+  background-color: #f8f7f4
