Componente listo_pendiente Ad

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -2,12 +2,17 @@
   &-1
     animation: float1 3.5s ease-in-out infinite alternate
     position: absolute
-    top: 70%
+    top: 30%
     right: 10%
   &-2
     animation: float1 2.8s ease-in-out infinite alternate
     position: absolute
     top: 20%
+    right: 80%
+  &-3
+    animation: float1 2.8s ease-in-out infinite alternate
+    position: absolute
+    top: 80%
     right: 80%
 
 
